--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <p>
     <script>
 function calcular(peso, altura){
-    return peso/altura(altura**2);
+    return peso/(altura**2);
 }
 alert("CLIQUE EM OK PARA COMEÇAR");
 let nome = prompt("Qual seu nome?");
