--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@ document.write(nome.bold() + texto + imc.fontcolor("green"));
     </script> 
     </p> 
 <ul>
-<li>Abaixo de 18,5</li>   <li>abaixo do peso</li>
-
+<li>Abaixo de 18,5</li> 
+<li>Entre 18,6 e 24,9</li>
+<li>Entre 25,0 e 29,9</li>
+<li>Entre 30,0 e 34,9</li>
+<li>Entre 35,0 e 39,9</li>
+<li>Acima de 40</li>
 </ul>
 </body>
 </html>
