--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ document.write(nome.bold() + texto + imc.fontcolor("green"));
     </script> 
     </p> 
 <ul>
-<li>Abaixo de 18,5</li> 
+<li>Abaixo de 18,5 - abaixo </li> 
 <li>Entre 18,6 e 24,9</li>
 <li>Entre 25,0 e 29,9</li>
 <li>Entre 30,0 e 34,9</li>
